Fix z-index so buttons are now clickable

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,8 +21,9 @@ a {
 nav {
   height: 7vh;
   min-height: 50px;
+  width: 100%;
   background-color:rgb(5, 223, 197);
-  position: sticky;
+  position: fixed;
   top: 0;
   display: flex;
   align-items: center;
@@ -246,8 +247,6 @@ form p {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  position: relative;
-  z-index: -2;
   padding: 0 10px;
 }
 .item {
@@ -269,6 +268,10 @@ form p {
   margin-bottom: 5px;
   text-transform: uppercase;
   font-weight: 600;
+}
+
+.item span {
+  line-height: 28px;
 }
 
 .profile-products-heading {
@@ -295,7 +298,7 @@ form p {
   text-decoration: none;
   text-align: center;
   border-radius: 15px;
-  box-shadow: 2px 2px 1px rgba(255, 255, 255, 0.925);
+  box-shadow: 2px 2px 1px rgba(56, 55, 55, 0.5);
 }
 .edit-button {
   background-color: #05DFC5;
@@ -315,10 +318,18 @@ form p {
   box-shadow: inset  0px 0px 0px 3px #00AADD;
   background-color: white;
 }
-/********************** PROFILE ***********************/
-/* .display-page {
-  padding-top: 50px;
-} */
+
+/********************** ALL PRODUCTS ***********************/
+
+.available-item {
+  color: white;
+}
+
+.item-allergens {
+  color: red;
+  font-weight: bold;
+}
+
 /********************* EDIT FORM **********************/
 .edit-page {
   height: 93vh;
